--- a/portal/portal-impl/impl/pom.xml
+++ b/portal/portal-impl/impl/pom.xml
@@ -66,6 +66,10 @@
                 <artifactId>profile2-api</artifactId>
         </dependency>
         <dependency>
+                <groupId>org.sakaiproject.search</groupId>
+                <artifactId>search-api</artifactId>
+        </dependency>
+        <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
         </dependency>
