--- a/portal/portal-impl/impl/src/bundle/profile-popup.properties
+++ b/portal/portal-impl/impl/src/bundle/profile-popup.properties
@@ -6,10 +6,10 @@ accept = Accept
 accept_tooltip = Click to accept this person's connection request
 ignore = Ignore
 ignore_tooltip = Click to ignore the connection request from this person
-cancel = Cancel Connection
+cancel = Cancel Request
 cancel_tooltip = Click to cancel your connection request to this person
 
-profile = Profile
+profile_label = Profile
 profile_tooltip = Click on this to view this person's Profile
 email = Email
 email_tooltip = Click on this to send this person an email
