--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -43,6 +43,7 @@ label.gradeitem.notcounted=Gradebook Item not included in course grade calculati
 label.gradeitem.extracredit=This is an Extra Credit Gradebook Item
 label.gradeitem.extracreditcategory=This is an Extra Credit Category
 label.gradeitem.categoryaverage={0} Weighted Average
+label.gradeitem.categoryaveragelabel=Weighted Average
 label.gradeitem.categoryheadertooltip=Category: {0}
 label.gradeitem.categoryweight=Category weight
 label.gradeitem.categoryandweightheadertooltip=Category: {0}, Weight: {1}
