--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -24,7 +24,7 @@ label.avg=Avg:
 label.total=Total:
 label.relativeweight=Relative weight:
 label.due=Due:
-label.category=Category:
+label.category=Cat:
 label.noduedate=-
 label.percentage.valued={0}%
 label.percentage.plain=%
