SAK-32769 add a clear action to the student filter input

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -80,6 +80,7 @@ column.header.studentNumber = Student Number
 column.header.coursegrade = Course Grade
 
 filter.students = Filter students
+filter.studentsclear = Clear student filter
 filter.groups = Filter by group/section
 
 button.addgradeitem = Add Gradebook Item
