SAK-32584 Changes following feedback.

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -3061,7 +3061,8 @@
 # DEFAULT: 500
 # site.entity.pagesize.maximum=200
 
-# Set the site entity broker properties that can be updated by a maintain type user.
+# Set the site entity broker properties that can be updated by a user with site update permission.
+# Only works for single value properties, not multivalued.
 # DEFAULT: none (null)
 # site.entity.updateable.props=contact-email, contact-name
 
