SAK-32584 Add default fields that can be updated.

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -3063,7 +3063,7 @@
 
 # Set the site entity broker properties that can be updated by a user with site update permission.
 # Only works for single value properties, not multivalued.
-# DEFAULT: none (null)
+# DEFAULT: contact-email, contact-name
 # site.entity.updateable.props=contact-email, contact-name
 
 # Show the menu option for duplicate site
