--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2968,6 +2968,11 @@
 # DEFAULT: 500
 # site.entity.pagesize.maximum=200
 
+# Set the site entity broker properties that can be updated by a user with site update permission.
+# Only works for single value properties, not multivalued.
+# DEFAULT: contact-email, contact-name
+# site.entity.updateable.props=contact-email, contact-name
+
 # Show the menu option for duplicate site
 # SAK-27908: disabled this option by default because it is not run in a separate thread like Import from Site
 # DEFAULT: false
