SAK-32578 updated OptionsBean.java options.jsp sections.properties

--- a/sections/sections-app-util/src/bundle/sections.properties
+++ b/sections/sections-app-util/src/bundle/sections.properties
@@ -1,4 +1,6 @@
 #Tue Jan 25 16:42:46 CET 2011
+options_confirmInternal=Manually manage will prevent group membership updates from an automated enrollment system. Do you want to continue?
+options_manually_manage=Manually Manage
 javax.faces.validator.LongRangeValidator.MINIMUM=Please enter a number greater than {0}.
 student_view_header_available=Avail.
 add_sections_add=Add Sections
