SAK-32659 Moved commons tool to portal.i18n
Renamed i18n translate function to 'tr' and updated connections manager
code.
Tidied up SakaiI18n a bit.

--- a/commons/impl/pom.xml
+++ b/commons/impl/pom.xml
@@ -85,6 +85,12 @@
                     <include>**/*.sql</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>${basedir}/src/i18n</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
         </resources>
         <!-- unit testing -->
         <plugins>
