SAK-32655 - Add default property for signup email notification availability

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -4472,6 +4472,12 @@
 # signup.otherSitesAvailability=false
 
 # ######################################
+# SAK-32655 - Email notification property
+# DEFAULT: all
+# Possible values: (one of the following) all signup_only organizers_only
+# signup.default.email.selected=organizers_only
+
+# ######################################
 # SAK-29271 Feedback Tool Properties
 # ######################################
 # Recipient address that will receive the contact emails
