SAK-32690 Improvements over "Add Tools" button

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -925,6 +925,11 @@
 # DEFAULT: true
 # portal.autofavorite=false
 
+# SAK-32690 Enable a link in the LHS tool menu to add more tools, it redirects the user to the tool manage helper.
+# The legacy property was "portal.experimental.addmoretools", this property is also supported.
+# DEFAULT: false
+# portal.addmoretools.enable = true
+
 # ########################################################################
 # SECURITY
 # ########################################################################
