--- a/basiclti/basiclti-tool/src/bundle/ltitool.properties
+++ b/basiclti/basiclti-tool/src/bundle/ltitool.properties
@@ -123,6 +123,7 @@ error.tool.not.found=Tool not found
 error.missing.return=Called as helper without return URL
 error.need.key.secret=This tool will not function without a key and secret.
 error.link.placement.update=Error updating placement information in configuration item
+error.tool.no.encryption.key=This server does not have basiclti.encryption.key set in its sakai.properties.  Until you set this value, LTI secrets will be unencrypted in the database.
 
 need.tool.info=<p>Note: This tool was imported and needs a key and secret before it will function.</p>
 need.tool.secret=Tool secret
