SAK-31843 : Assignments / peer reviewer comments text field

--- a/assignment/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-bundles/resources/assignment.properties
@@ -981,6 +981,7 @@ peerassessment.reviewerNoAttachments=No attachments were submitted by the review
 peerassessment.alert.saveerrorunkown=An error has occurred while saving, please refresh and try again.
 peerassessment.alert.saveinvalidscore=You must enter a valid number greater than 0 for the score.
 peerassessment.alert.savenoscorecomment=You must enter a grade or a comment in order to submit your peer assessment.
+peerassessment.alert.commenttoolong=Your comment exceeds the maximum allowed.
 peerassessment.instructions.reviewer=Instructions for the Reviewer
 peerassessment.invliadGroupAssignment=Peer assessments are not available for group assignments.
 peerassessment.invliadSubmissionTypeAssignment=Peer assessments are not available for non-electronic assignments.
