--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -1632,7 +1632,7 @@
 # DEFAULT: false
 # wsetup.skipManualCourseCreation=true
 
-# SAK-22437 Add Site Information Display (site description) to site import options list
+# SAK-22437 Add Welcome (site description) to site import options list
 # DEFAULT: true
 # site-manage.importoption.siteinfo=false
 
