SAK-30656 - Add delete tool checkboxes to delete deployment screen

--- a/basiclti/basiclti-tool/src/bundle/ltitool.properties
+++ b/basiclti/basiclti-tool/src/bundle/ltitool.properties
@@ -161,6 +161,8 @@ deploy.activate.notools=There are no tools to activate
 deploy.parse.exception=Unable to parse provider profile
 deploy.delete=Deleting Deployment
 deploy.delete.sure=Are you sure you want to delete this deployment?
+deploy.delete.tool=Delete: 
+deploy.delete.tools=The tools below were installed by this deployment. If you delete these tools, all of the links to these tools in all the sites in this system will also be deleted.  You can delete the deployment without deleting the tools.
 deploy.data=This deployment supports :tools tools and :contents placements in :sites sites.
 add.deploy=Install LTI 2.x Tool
 deploy.description.system=Deployments currently in this system
