--- a/basiclti/basiclti-impl/src/bundle/ltiservice.properties
+++ b/basiclti/basiclti-impl/src/bundle/ltiservice.properties
@@ -51,6 +51,9 @@ bl_frameheight=Frame Height
 bl_allowframeheight=Allow frame height to be changed
 bl_allowframeheight_allow=Allow
 bl_allowframeheight_disallow=Do not allow
+bl_siteinfoconfig=Configuration dialog when tool is selected
+bl_siteinfoconfig_bypass=Bypass configuration dialog
+bl_siteinfoconfig_config=Show configuration dialog
 bl_newpage=Launch in Popup
 bl_newpage_off=Never launch in Popup
 bl_newpage_on=Always launch in Popup
