SAK-32712 Roster feature to add the display of a user's properties

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2806,6 +2806,10 @@
 # DEFAULT: false
 # roster.showVisits=true
 
+# Include user properties in roster
+# DEFAULT: true
+# roster_view_user_properties=false
+
 ## SEARCH
 # Elastic search is the default search as of Sakai 10
 # For more information please see this confluence page
