--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1255,3 +1255,8 @@ sitegen.sitedel.hard = NOTE: You chose Hard Delete so these sites will have thei
 sitegen.sitedel.hard.button = Hard delete
 
 import.newtool = Note: If you choose to import content from the tools marked with a +, the tools will be added to your site.
+
+sinfo.lessonbuildersubnav.name=Lessons subpage navigation
+sinfo.lessonbuildersubnav.allowForSite=Enable <strong>Lessons subpage navigation</strong> in the left tool menu.
+sinfo.lessonbuildersubnav.confirmEnabled=You have enabled the Lessons subpage navigation for this site.
+sinfo.lessonbuildersubnav.enabled=Enabled for the site
