--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 <module>reset-pass</module>
                 <module>roster2</module>
                 <module>rsf</module>
-                <module>rubrics</module>
+                <!--<module>rubrics</module>-->
                 <module>rwiki</module>
                 <module>tags</module>
                 <module>samigo</module>
@@ -176,7 +176,7 @@
                 <module>reset-pass</module>
                 <module>roster2</module>
                 <module>rss</module>
-                <module>rubrics</module>
+                <!--<module>rubrics</module>-->
                 <module>rwiki</module>
                 <module>tags</module>
                 <module>samigo</module>
