SAK-32769 fix required CSS not adding to Wicket labels and show asterisk on those required fields

--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/GradebookNgApplication.properties
@@ -557,3 +557,5 @@ metadata.category=Category:
 metadata.categoryAverage=Category Average:
 metadata.flags=This score has the following flags:
 metadata.noflags=No notifications
+
+AutoLabel.CSS.required=required
