--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -1936,7 +1936,8 @@
 # contentreview.option.student_preview.default=true
 
 # SAK-31923
-# Sets the separation char on exporting to CSV
+# Sets the separation char on exporting to 
+
 # Default: ,
 # csv.separator=;
 
@@ -4464,21 +4465,114 @@
 # SIGNUP TOOL added in Sakai 10
 # ######################################
 
+# signup.default.email.notification
+# if false, all Email Notification Checkboxes are unchecked to avoid sending out unintended emails.
+# DEFAULT: FALSE
+# signup.default.email.notification=true
+
+# signup.default.allow.waitlist
+# if true, the waitlist option is on for participants when the space at a timeslot is full.
+# DEFAULT: TRUE
+# signup.default.allow.waitlist=false
+
+# signup.default.allow.comment
+# if true, the participant can add a comment during sign-up.
+# DEFAULT: TRUE
+# signup.default.allow.comment=false
+
+# signup.event.default.auto.reminder
+# if true, the attendee of the meeting will receive an email reminder, one day in advance.
+# DEFAULT: TRUE
+# signup.event.default.auto.reminder=false
+
+# signup.permission.update.enabled
+# if true, the permission link at the tool bar will be available to organizer.
+# DEFAULT: TRUE
+# signup.permission.update.enabled=false
+
+# signup.autoRiminder.option.choice.setting
+# if false, the organizer will has no choice to decide whether the meeting 
+# should send a auto-reminder email or not. The process will be determined by 
+# signup.event.default.auto.reminder value.
+# DEFAULT: TRUE
+# signup.autoRiminder.option.choice.setting=false
+
+# signup.permission.update.enabled
+# if true, the permission link at the tool bar will be available to organizer.
+# DEFAULT: TRUE
+# signup.permission.update.enabled=false
+
+# signup.userId.inputMode.choiceOption.setting
+# if false, the organizer will have no option to enable the UserId Input Mode.
+# DEFAULT: TRUE
+# signup.userId.inputMode.choiceOption.setting=false
+
+# signup.default.export.to.calendar.setting
+# if true, the event will be published into Calendar tool (Scheduler)
+# DEFAULT: TRUE
+# signup.default.export.to.calendar.setting
+
+# signup.enableAttendance
+# if true, it provide the ability to take attendence of the event
+# DEFAULT: TRUE
+# signup.enableAttendance=false
+
+# signup.maxAttendeesPerSlot
+# it defines the max. number of attendees in a slot
+# DEFAULT: 500
+# signup.maxAttendeesPerSlot=50
+
+# signup.maxSlots
+# it defines the max slots allowed in an event
+# DEFAULT: 500
+# signup.maxSlots=5000
+
+# signup.default.create.groups
+# if true, the event will enable it to automatically generate the site related groups 
+# according to the timeslots. However, user still has the option to uncheck it during 
+# the event creation.
+# DEFAULT: FALSE
+# signup.default.create.groups
+
+# signup.post.eventTracking.info.to.DB
+# if false, the eventTracking for sign-up tool is turned off.
+# DEFAULT: TRUE
+# signup.post.eventTracking.info.to.DB=false
+
 # SAK-27982: Display all signup recurring meetings by default
 # DEFAULT: FALSE
 # signup.showAllRecurMeetings.default=true
 
 # Signup CSV export
+# if true, organizer will have an additional option to download data in csv format.
 # DEFAULT: FALSE
 # signup.csv.export.enabled=true
 
+# signup.email.notification.attendee.signed.up
+# if true, the attendee will always get one email notification when he signs up
+# DEFAULT: TRUE
+# signup.email.notification.attendee.signed.up=false
+
 # Signup attendance
+# if true, it provide the ability to take attendence of the event
 # DEFAULT: TRUE
 # signup.enableAttendance=false
 
 # Signup other sites availability
+# enable/disable option to share events with other sites 
+# (reason to disable include mitigating risk of sending email reminders 
+# to hundreds of large sites.
+# (if you defined the following parameter: signup.other.sites.availability=false/true 
+# in the tool property xml file, it will precede over value defined in sakai property)
 # DEFAULT: TRUE
 # signup.otherSitesAvailability=false
+
+# signup.email.notification.mandatory.for.newMeeting
+# if true, the notification is mandatory when a new event is created.  
+# This will make sure that the organizer will receive the iCal attachment for third party.
+# DEFAULT: FALSE
+# signup.email.notification.mandatory.for.newMeeting
+
 
 # ######################################
 # SAK-32655 - Email notification property
