SAK-32721 - Check the LTI Add Tool Checkboxes for Sanity in JavaScript

--- a/basiclti/basiclti-tool/src/bundle/ltitool.properties
+++ b/basiclti/basiclti-tool/src/bundle/ltitool.properties
@@ -33,6 +33,8 @@ tool.note=<p>If you have a key and secret, you must first install the tool using
 tool.launch=Launch URL:
 tool.resource.handler=Resource Handler:
 tool.already.exists=<br/><span style="color:red">(Note tool aready exists for resource_handler)</span>
+tool.patch.title=Content Item Launch
+tool.patch.body=Since you are placing this tool as a Content Item tool, we have automatically set it so the title and launch URL can be changed.
 
 content.menu=Tool Link
 content.title=Tool Link
