SAK-32745 Added default config entry for webservices.allow-request

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -1540,6 +1540,11 @@
 # webservices.log-allowed= 
 # webservices.log-denied=
 
+# A comma separated list of requests that should be allowed, regardless of the other access rules. Anything added here
+# will OVERRIDE the other rules.
+#
+# webservices.allow-request=/sakai-ws/rest/something,/sakai-ws/soap/somethingelse
+
 # SAK-29943 - Lock down the report service
 # The report service allows running arbitrary SQL queries, it is diabled by default. Even when enabled you need a super user session to run reports.
 # DEFAULT: false
