SAK-32749 - Change course header to include published

--- a/site-manage/site-manage-tool/tool/src/bundle/membership.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/membership.properties
@@ -49,7 +49,7 @@ mb.enrolments.noMatchingEnrolments=You have no official course enrollments that 
 mb.enrolments.summary=Table of your official course section enrollments.
 mb.enrolments.columnHeader.term=Term
 mb.enrolments.columnHeader.section=My Official Course Section
-mb.enrolments.columnHeader.courseSite=Course Site
+mb.enrolments.columnHeader.courseSite=Published Course Site
 mb.enrolments.sortByTerm=Sort by Term start date
 mb.enrolments.sortByTerm.asc=Sort by Term start date ascending
 mb.enrolments.sortByTerm.desc=Sort by Term start date descending
