--- a/master/pom.xml
+++ b/master/pom.xml
@@ -2042,12 +2042,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.16</version>
-          <!-- needs to be located in the project to work
+          <version>2.17</version>
           <configuration>
-            <configLocation>src/site/checkstyle.xml</configLocation>
+            <configLocation>google_checks.xml</configLocation>
+            <linkXRef>false</linkXRef>
           </configuration>
-          -->
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
