SAK-18587 - Synoptic tool for assignments

--- a/kernel/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
+++ b/kernel/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
@@ -179,18 +179,20 @@ resources.show_all_collections.helper=true
 wsetup.group.support=true
 # Required because the actual default sites do not have the right set of tools - https://jira.sakaiproject.org/browse/SAK-25989
 # Auto-add synoptic tools to Home (SAK-16747) for default and course sites
-wsetup.home.toolids.count=5
+wsetup.home.toolids.count=6
 wsetup.home.toolids.1=sakai.iframe.site
 wsetup.home.toolids.2=sakai.synoptic.announcement
 wsetup.home.toolids.3=sakai.summary.calendar
 wsetup.home.toolids.4=sakai.synoptic.messagecenter
 wsetup.home.toolids.5=sakai.synoptic.chat
-wsetup.home.toolids.course.count=5
+wsetup.home.toolids.6=sakai.synoptic.assignment
+wsetup.home.toolids.course.count=6
 wsetup.home.toolids.course.1=sakai.iframe.site
 wsetup.home.toolids.course.2=sakai.synoptic.announcement
 wsetup.home.toolids.course.3=sakai.summary.calendar
 wsetup.home.toolids.course.4=sakai.synoptic.messagecenter
 wsetup.home.toolids.course.5=sakai.synoptic.chat
+wsetup.home.toolids.course.6=sakai.synoptic.assignment
 
 # is site joinable option setable within Worksite Setup or Site Info tool for certain type of site?
 #wsetup.disable.joinable.count=1
