--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -154,6 +154,7 @@ java.home = Overview
 java.help = Help
 java.recann = Recent Announcements
 java.recdisc = Recent Discussion Items
+java.recassign = Recent Assignment Items
 java.invurl = Invalid URL
 java.toimport = Please choose at least one site to import.
 java.toimporttool = Please choose at least one tool to import.
