--- a/assignment/assignment-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/assignment/assignment-tool/tool/src/webapp/WEB-INF/web.xml
@@ -35,6 +35,15 @@
         <dispatcher>INCLUDE</dispatcher>
     </filter-mapping>
 
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>sakai.synoptic.assignment</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+
 	<!-- the vm handling servlet : used direct by name, not by URL path -->
 	<servlet>
 		<servlet-name>
@@ -87,6 +96,21 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
      </servlet>
+
+    <servlet>
+        <servlet-name>
+          sakai.synoptic.assignment
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.assignment.tool.AssignmentAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>assignment/chef_assignments</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+     </servlet>
+
 
     <listener>
         <listener-class>org.sakaiproject.util.ToolListener</listener-class>
