SAK-32753 Roster filter user properties

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2816,6 +2816,10 @@
 # DEFAULT: true
 # roster_view_user_properties=false
 
+# Filter user properties that should never be visible using a regex pattern
+# DEFAULT: ^udp\\.dn$
+# roster.filter.user.properties.regex=^udp\\.dn$
+
 ## SEARCH
 # Elastic search is the default search as of Sakai 10
 # For more information please see this confluence page
