SAK-32755 Allow config of tool to add users
This allows the tool used to add users to a site to be configured as a
deployment and a per site level through sakai.properties and site
properties. The site property overrides the sakai.properties config. The
property key is:

    sitemanage.add.user.tool

When looked up it's also checked that it is a valid helper tool to avoid
situations where the add user helper can't be run.

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -4743,6 +4743,11 @@
 #course_site_removal_service.num_days_after_term_ends=14
 
 
+# Tool ID to use when adding users to a site.
+# Can also be overridden by adding to site properties.
+# DEFAULT: sakai-site-manage-participant-helper
+# sitemanage.add.user.tool=other.tool.id
+
 # ###############################
 # PA System
 # ###############################
