SAK-32767 Allow admins to set the new Site ID when duplicating sites from Site Info

--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -976,6 +976,8 @@ sitdup.dupsit    = Duplicate site
 sitdup.dupsit2   = Duplicated site
 sitdup.hasbeedup = has been created.
 sitdup.sitti    = Site Title
+sitdup.newsitid = Site ID
+sitdup.idused   = The ID is being used by an existing site, please input a different ID or leave the field empty to allow the system to generate a new random ID
 sitdup.duptit   = Retain Resources file storage quota?
 sitdup.curquot  = Currently set to
 sitdup.yesdupequota = Yes
