--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2046,8 +2046,8 @@
 # DEFAULT: none (null)
 # basiclti.consumer_instance_description=
 
-# DEFAULT: none (null)
-# basiclti.consumer_instance_guid=
+# DEFAULT: serverName 
+# basiclti.consumer_instance_guid=lmsng.school.edu
 
 # DEFAULT: none (null)
 # basiclti.consumer_instance_name=
