--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2380,8 +2380,8 @@
 # To show the privacy page, include pref_privacy_title in the preference_pages setting.
 
 # To eliminate a page, explicity set preference.pages and leave the page value out.
-# DEFAULT: prefs_noti_title, prefs_timezone_title, prefs_lang_title, prefs_hidden_title
-# preference.pages=prefs_noti_title, prefs_timezone_title, prefs_lang_title, prefs_privacy_title, prefs_hidden_title
+# DEFAULT: prefs_noti_title, prefs_timezone_title, prefs_lang_title, prefs_hidden_title, prefs_ckeditor_title
+# preference.pages=prefs_noti_title, prefs_timezone_title, prefs_lang_title, prefs_privacy_title, prefs_hidden_title, prefs_ckeditor_title
 
 # Should research/collab specific preferences (no syllabus) be displayed?
 # DEFAULT: false.
