SAK-33240 - Support for portal to expose the editor type for ckeditor

--- a/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
+++ b/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
@@ -123,8 +123,8 @@ privacy_change_later_instructions=To change your privacy settings in the future,
 
 editor_prompt=Default CKEditor toolbar layout
 editor_auto=Auto detected based on browser size
-editor_basic=Force basic/mobile mode
-editor_advanced=Force advanced/desktop mode
+editor_basic=Force basic/mobile mode (Limited set of buttons and features)
+editor_advanced=Force advanced/desktop mode (Full set of buttons, all features)
 
 
 ## SAK-23895:Display full name of course, not just code, in site tab
