--- a/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
+++ b/user/user-tool-prefs/tool/src/bundle/user-tool-prefs.properties
@@ -121,10 +121,10 @@ privacy_choice_later=Ask me again later
 
 privacy_change_later_instructions=To change your privacy settings in the future, visit<br />Home > Preferences > Privacy Status
 
-editor_prompt=Default CKEditor toolbar layout
+editor_prompt=Default Rich Text Editor toolbar layout
 editor_auto=Auto detected based on browser size
 editor_basic=Force basic/mobile mode (Limited set of buttons and features)
-editor_advanced=Force advanced/desktop mode (Full set of buttons, all features)
+editor_full=Force full/desktop mode (Full set of buttons, all features)
 
 
 ## SAK-23895:Display full name of course, not just code, in site tab
