--- a/assignment/assignment-api/api/pom.xml
+++ b/assignment/assignment-api/api/pom.xml
@@ -48,5 +48,9 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.kernel</groupId>
+            <artifactId>sakai-kernel-private</artifactId>
+        </dependency>
     </dependencies>
 </project>
