LSNBLDR-857 move lesson subpage tree code from portal to lessonbuilder

--- a/lessonbuilder/components/pom.xml
+++ b/lessonbuilder/components/pom.xml
@@ -83,6 +83,9 @@
                     <include>**/*.sql</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>${basedir}/src/resources</directory>
+            </resource>
         </resources>
     </build>
 </project>
