SAK-32770 set a default value for tool_consumer_instance_guid (#4686)
(cherry picked from commit 0ecf9b786961df991ddbf85932f0ff8a3a91a991)

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -1998,8 +1998,8 @@
 # DEFAULT: none (null)
 # basiclti.consumer_instance_description=
 
-# DEFAULT: none (null)
-# basiclti.consumer_instance_guid=
+# DEFAULT: serverName 
+# basiclti.consumer_instance_guid=lmsng.school.edu
 
 # DEFAULT: none (null)
 # basiclti.consumer_instance_name=
