SAK-33271 - Document some missing properties in roster (Sakai 12)

--- a/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
+++ b/config/configuration/bundles/src/bundle/org/sakaiproject/config/bundle/default.sakai.properties
@@ -2800,6 +2800,11 @@
 # DEFAULT: sortName.
 # roster.defaultSortColumn=sortName
 
+# SAK-28901 Ability to set view as the default
+# DEFAULT: 0
+# Possible values: 0=overview, 1=pictures, 2=group membership, 3=status
+# roster.defaultState=2
+
 # Whether to render the email column for the roster view
 # DEFAULT: true
 # roster_view_email=false
@@ -2819,6 +2824,14 @@
 # Filter user properties that should never be visible using a regex pattern
 # DEFAULT: ^udp\\.dn$
 # roster.filter.user.properties.regex=^udp\\.dn$
+
+# SAK-32109 Number of users to display "per page" default and when scrolling
+# DEFAULT: 10
+# roster.display.pageSize=50
+
+# SAK-28904 Ability to hide roles in roster 
+# DEFAULT: null (none)
+# roster2.visibleroles=instructor,student
 
 ## SEARCH
 # Elastic search is the default search as of Sakai 10
