AssignmentAction and template fixes

--- a/assignment/impl/src/test/resources/hibernate.properties
+++ b/assignment/impl/src/test/resources/hibernate.properties
@@ -1,6 +1,7 @@
 # Base Hibernate settings
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
+hibernate.enable_lazy_load_no_trans=true
 
 # Connection definition to the HSQLDB database
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
