SAK-31969 dont present ctrl options to user per latest accessibility phone call

--- a/content/content-bundles/resources/content.properties
+++ b/content/content-bundles/resources/content.properties
@@ -7,7 +7,7 @@ button.actions		= Actions
 sort.title			= Reordering:
 sort.save 			= Save
 sort.cancel 		= Cancel
-sort.instruction.general=To reorder, drag and drop list items or use the keyboard to focus on the tool then use Ctrl + Up Arrow and Ctrl + Down Arrow or U or D keys. Changes will take effect upon 'Save'.
+sort.instruction.general=To reorder, drag and drop list items or use the keyboard to focus on the tool then use U or D keys. Changes will take effect upon 'Save'.
 sort.instruction.general.hidden=Tab into list and hold Control key and use arrow keys to sort.
 sort.undo.last.label=Undo last
 sort.undo.all.label=Undo all
