SAK-33284 replace assignment use of Fluid Infusion with jquery-ui sortable component

--- a/assignment/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-bundles/resources/assignment.properties
@@ -889,7 +889,7 @@ same_assignment_title=Assignment with the same title ''{0}'' exists in the site.
 
 #Reorder Vm
 reorder.title=Organize Default Assignment List View 
-reorder.instruction.general=To reorder, drag and drop list items and then click Save.
+reorder.instruction.general=To reorder, drag and drop list items, or use the keyboard U and D keys, and then click Save.
 reorder.instruction.input= You can also edit list order numbers.
 reorder.instruction.general.hidden=Tab into list and hold Control key and use arrow keys to sort.
 reorder.undo.last.label=Undo last
