--- a/sitemembers/pom.xml
+++ b/sitemembers/pom.xml
@@ -46,6 +46,10 @@
 			<artifactId>sakai-kernel-util</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.sakaiproject.portal</groupId>
+			<artifactId>sakai-portal-util</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 		</dependency>
