SAK-33297 copy the URL straight to the user's clipboard

--- a/content/content-bundles/resources/types.properties
+++ b/content/content-bundles/resources/types.properties
@@ -261,7 +261,7 @@ paste.error		= Could not add ''{0}'' to this folder.
 props.access		 = Availability and Access
 props.file		 = File Details
 props.open	= Open
-props.select = Select URL (for copying)
+props.select = Copy URL to clipboard
 props.fldr		 = Folder Details
 props.creatime		 = Created
 props.creatime.upl		 = Uploaded
@@ -385,7 +385,6 @@ paste.here = here
 # dropbox group filter
 grp.view = View
 grp.all = All sections/groups
-props.select.help=Remember to copy the URL via Ctrl+C or Option+C. This link only selects the URL.
 
 props.shorturl=Short URL
 
