KNL-1552 BaseContentService cacheing improvements

--- a/kernel/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
+++ b/kernel/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
@@ -264,6 +264,9 @@ memory.org.sakaiproject.user.api.AuthenticationManager=maxElementsInMemory=250,t
 memory.org.sakaiproject.user.api.UserDirectoryService=maxElementsInMemory=100000,timeToLiveSeconds=86400,timeToIdleSeconds=86400
 # memory.org.sakaiproject.user.api.UserDirectoryService.callCache *ALL DEFAULTS*
 # memory.org.sakaiproject.user.impl.BasePreferencesService.preferences *ALL DEFAULTS*
+memory.org.sakaiproject.content.impl.BaseContentService.contentCollection=maxElementsInMemory=5000,timeToLiveSeconds=28800,timeToIdleSeconds=3600
+memory.org.sakaiproject.content.impl.BaseContentService.contentResource=maxElementsInMemory=10000,timeToLiveSeconds=28800,timeToIdleSeconds=3600
+
 
 #KNL-1306 default
 content.mimeMagic.ignorecontent.extensions=js
